--- a/about.html
+++ b/about.html
@@ -179,6 +179,6 @@
         </div>
       </footer>
     </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
