--- a/legalities.html
+++ b/legalities.html
@@ -135,6 +135,6 @@
             </div>
           </footer>
       </div>
-      <script src="./index.js"></script>
+      <script src="./script.js"></script>
 </body>
 </html>
