--- a/materials.html
+++ b/materials.html
@@ -182,6 +182,6 @@
             </div>
           </footer>
       </div>
-      <script src="./index.js"></script>
+      <script src="./script.js"></script>
 </body>
 </html>
