--- a/about.html
+++ b/about.html
@@ -179,6 +179,7 @@
         </div>
       </footer>
     </div>
+    <!-- this is a comment -->
     <script src="./script.js"></script>
   </body>
 </html>
